--- a/src/app/admin/login-page/login-page.html
+++ b/src/app/admin/login-page/login-page.html
@@ -1,1 +1,14 @@
 <p>login-page works!</p>
+
+<form [formGroup]="form" (ngSubmit)="submit()">
+    
+    <div class="form-control">
+        <label for="email">Email</label>
+        <input type="email" id="email" formControlName="email">
+        <div *ngIf="form.get('email')?.touched && form.get('email')?.invalid">
+
+
+        </div>
+    </div>
+
+</form>
