--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -1,2 +1,13 @@
 <p>main-page works!</p>
+<div class="card-product">
+    <div class="card-product__title">Iphone</div>
+    <div class="card-product__price">100$</div>
+    <div class="card-product__img">
+        <img src="https://pngimg.es/d/iphone16_PNG37.png" alt="Iphone">
+    </div>
+    <p class="card-product__desc">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam a laborum quae voluptatibus praesentium iure consequatur saepe iste excepturi sint quod, necessitatibus dolorum ad eos cupiditate voluptatem sunt deleniti atque?
+    </p>
+  
+</div>
 <router-outlet></router-outlet>
