--- a/src/app/admin/login-page/login-page.html
+++ b/src/app/admin/login-page/login-page.html
@@ -5,10 +5,24 @@
     <div class="form-control">
         <label for="email">Email</label>
         <input type="email" id="email" formControlName="email">
-        <div *ngIf="form.get('email')?.touched && form.get('email')?.invalid">
-
+        <div *ngIf="form.get('email')?.touched && form.get('email')?.invalid" class="error">
+            <small *ngIf="form.get('email')?.errors?.['required']">Email is required.</small>
+            <small *ngIf="form.get('email')?.errors?.['email']">Enter a valid email.</small>
 
         </div>
     </div>
+
+
+    <div class="form-control">
+        <label for="password">Password</label>
+        <input type="password" id="password" formControlName="password">
+        <div *ngIf="form.controls['password']?.touched && form.controls['password']?.invalid" class="error">
+            <small *ngIf="form.controls['password']?.errors?.['required']">Password is required.</small>
+            <small *ngIf="form.controls['password']?.errors?.['minlength']">Enter a valid Password 8 symbols long.</small>
+
+        </div>
+    </div>
+<button type="submit" class="btn btn-primary" [disabled]="form.invalid">Submit</button>
+
 
 </form>
