lesson12 new commit

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,11 @@
-<p>main-page works!</p>
-<div class="card-product">
+<p>Products</p>
+
+<app-product-page></app-product-page>
+
+
+
+
+<!-- <div class="card-product">
     <div class="card-product__title">Iphone</div>
     <div class="card-product__price">100$</div>
     <div class="card-product__img">
@@ -10,4 +16,4 @@
     </p>
   
 </div>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
